--- a/app/design/frontend/default/rooja/template/checkout/onepage/shipping.phtml
+++ b/app/design/frontend/default/rooja/template/checkout/onepage/shipping.phtml
@@ -145,9 +145,9 @@ function loggedInShipping()
     <div id="shipping-buttons-container">
       <!--  <a href="#" class="back left" onclick="checkout.back(); return false;"><?php echo $this->__('Back') ?></a> -->
  <!--       <button type="button" class="form-button right" onclick="shipping.save()"><span><?php echo $this->__('Continue') ?></span></button>  -->
-        <span id="shipping-please-wait" style="display:none;" class="please-wait">
-            <img src="<?php echo $this->getSkinUrl('images/opc-ajax-loader.gif') ?>" class="v-middle" alt="" /> &nbsp; <?php echo $this->__('Loading next step...') ?> &nbsp;
-        </span>
+        <!-- <span id="shipping-please-wait" style="display:none;" class="please-wait">
+            <img src="<?php //echo $this->getSkinUrl('images/opc-ajax-loader.gif') ?>" class="v-middle" alt="" /> &nbsp; <?php //echo $this->__('Loading next step...') ?> &nbsp;
+        </span> -->
     </div>
     
 </div>
