--- a/app/design/frontend/default/rooja/template/customer/form/forgotpassword.phtml
+++ b/app/design/frontend/default/rooja/template/customer/form/forgotpassword.phtml
@@ -39,7 +39,7 @@
 	</form>
 	
 	<h2 id="getEarlyAccess" class="tr">Get Early Access</h2>
-	<a href="#" id="getOnList" class="tr">Get on the list now</a>
+	<a href="/customer/account/login" id="getOnList" class="tr">Get on the list now</a>
 	
 		
 </section><!--End Content-->
