--- a/app/design/frontend/default/rooja/template/page/lockdown.phtml
+++ b/app/design/frontend/default/rooja/template/page/lockdown.phtml
@@ -63,9 +63,6 @@
 <script type="text/javascript">
 		jQuery(document).ready(function() {
 			jQuery('#brands').innerfade({
-					speed: 1000,
-					timeout: 5000,
-					type: 'random_start',
 					containerheight: '19px'
 				});
 			
@@ -118,6 +115,26 @@
 	<?php echo $this->getChildHtml('global_notices') ?>
 	<?php echo $this->getChildHtml('global_messages') ?>
 	<?php echo $this->getChildHtml('content') ?>
+	<nav id="navLinks">
+		<div class="navCont">
+		<ul>
+			<li><a href="http://rooja.com">Home</a></li>
+			<li><a href="#aboutWrapper" class="fancyboxLink">About</a></li>
+			<li><a href="https://roojacareers.resumetracker.com/public" target="_blank">Careers</a></li>
+			<li><a href="mailto:support@rooja.in">Contact</a></li>
+			<li><a href="http://blog.rooja.com">Blog</a></li>
+		</ul>
+
+		<div id="socialLinks" class="fr">
+			<a href="http://www.twitter.com/roojafashion" title="follow rooja on twitter" target="_blank" id="twitter" class="tr">Follow us on Twitter</a>
+
+			<article id="fbLikes">
+				<fb:like href="http://www.facebook.com/roojafashion" send="false" layout="button_count" width="60" show_faces="false" font="arial" ref="website"></fb:like>
+
+			</article>
+		</div>
+		</div>
+	</nav>
 	<div style="display:none;">
 		<div id="aboutWrapper">
 			<div class="wrapper">
