--- a/app/design/frontend/default/rooja/template/checkout/onepage/shipping.phtml
+++ b/app/design/frontend/default/rooja/template/checkout/onepage/shipping.phtml
@@ -144,8 +144,8 @@ function loggedInShipping()
 <div>
 
     <div id="shipping-buttons-container">
-  <a href="#" class="back left" onclick="checkout.back(); return false;"><?php echo $this->__('Back') ?></a>
-<button type="button" class="form-button right" onclick="shipping.save()"><span><?php echo $this->__('Continue') ?></span></button>
+  <!-- <a href="#" class="back left" onclick="checkout.back(); return false;">Back</a> -->
+<!-- <button type="button" class="form-button right" onclick="shipping.save()"><span>Continute</span></button> -->
         <span id="shipping-please-wait" style="display:none;" class="please-wait">
             <img src="<?php echo $this->getSkinUrl('images/opc-ajax-loader.gif') ?>" class="v-middle" alt="" /> &nbsp; <?php echo $this->__('Loading next step...') ?> &nbsp;
         </span>
