--- a/app/design/frontend/default/rooja/template/checkout/onepage/billing.phtml
+++ b/app/design/frontend/default/rooja/template/checkout/onepage/billing.phtml
@@ -172,7 +172,7 @@ function loggedInBilling()
 <div >
 
     <div id="billing-buttons-container">
-          <button type="button" class="button right" onclick="billing.save()"><span><?php echo $this->__('Confirm Address') ?></span></button>
+          <!-- <button type="button" class="button right" onclick="billing.save()"><span>Confirm Address</span></button> -->
         <span id="billing-please-wait" style="display:none;" class="opc-please-wait">
             <img src="<?php echo $this->getSkinUrl('images/opc-ajax-loader.gif') ?>" class="v-middle" alt="" /> &nbsp; <?php echo $this->__('Loading next step...') ?> &nbsp;
         </span>
