--- a/app/design/frontend/default/rooja/template/checkout/onepage/payment.phtml
+++ b/app/design/frontend/default/rooja/template/checkout/onepage/payment.phtml
@@ -40,9 +40,9 @@ var payment = new Payment('co-payment-form', '<?php echo $this->getUrl('checkout
 </form>
 <div class="buttons-set" id="payment-buttons-container">
     <div id="payment-buttons-container">
-      <!--  <a href="#" class="back-link" onclick="checkout.back(); return false;"><span><?php echo $this->__('Back') ?></span></a> -->
+      <!--  <a href="#" class="back-link" onclick="checkout.back(); return false;"><span>Back</span></a> -->
         <button type="button" class="button" onclick="payment.save()"><span><?php echo $this->__('Review and Checkout') ?></span></button>
-        <span id="payment-please-wait" style="display:none;" class="please-wait">
+        <span id="payment-please-wait" style="display:none; opacity:0;" class="please-wait">
             <img src="<?php echo $this->getSkinUrl('images/opc-ajax-loader.gif') ?>" class="v-middle" alt="" /> &nbsp; <?php echo $this->__('Loading next step...') ?> &nbsp;
         </span>
     </div>
