--- a/app/design/frontend/default/rooja/template/page/lockdown.phtml
+++ b/app/design/frontend/default/rooja/template/page/lockdown.phtml
@@ -122,7 +122,7 @@
 			<li><a href="#aboutWrapper" class="fancyboxLink">About</a></li>
 			<li><a href="https://roojacareers.resumetracker.com/public" target="_blank">Careers</a></li>
 			<li><a href="mailto:support@rooja.in">Contact</a></li>
-			<li><a href="http://blog.rooja.com">Blog</a></li>
+			<li><a href="http://blog.rooja.com" target="_blank">Blog</a></li>
 		</ul>
 
 		<div id="socialLinks" class="fr">
