--- a/app/design/frontend/default/rooja/template/checkout/onepage/billing.phtml
+++ b/app/design/frontend/default/rooja/template/checkout/onepage/billing.phtml
@@ -129,10 +129,10 @@ function loggedInBilling()
 
                 <li class="fields" id="register-customer-password">
                 <div class="field">
-                <label for="billing:customer_password" class="required"><?php echo $this->__('Password') ?> <em>*</em></label><br/>
+                <label for="billing:customer_password" class="required"><?php echo $this->__('Password') ?> *</label><br/>
                 <input type="password" name="billing[customer_password]" id="billing:customer_password" title="<?php echo $this->__('Password') ?>" class="input-text required-entry validate-password" /></div>
                 <div class="field">
-                <label for="billing:confirm_password" class="required"><?php echo $this->__('Confirm Password') ?> <em>*</em></label><br/>
+                <label for="billing:confirm_password" class="required"><?php echo $this->__('Confirm Password') ?> *</label><br/>
                 <input type="password" name="billing[confirm_password]" title="<?php echo $this->__('Confirm Password') ?>" id="billing:confirm_password" class="input-text required-entry validate-cpassword" /></div></li>
             <?php endif ?>
 
@@ -144,7 +144,7 @@ function loggedInBilling()
 	                   <input type="text" name="billing[fax]" value="<?php echo $this->htmlEscape($this->getAddress()->getFax()) ?>" title="<?php echo $this->__('Fax') ?>" class="input-text" id="billing:fax" />
                 </div>
             <div class="field">
-	   		<label for="billing:telephone" class="required"><?php echo $this->__('Telephone') ?> <em>*</em></label><br/>
+	   		<label for="billing:telephone" class="required"><?php echo $this->__('Telephone') ?> *</label><br/>
 	                   <input type="text" name="billing[telephone]" value="<?php echo $this->htmlEscape($this->getAddress()->getTelephone()) ?>" title="<?php echo $this->__('Telephone') ?>" class="required-entry input-text" id="billing:telephone" />
                </div>
            </li>
