--- a/skin/frontend/default/rooja/css/styles.css
+++ b/skin/frontend/default/rooja/css/styles.css
@@ -1085,11 +1085,11 @@ form#discount-coupon-form .discount h2, .shipping h2  {font-size:14px;margin: 0 
 .cvv-what-is-this { cursor:help; margin-left:5px; }
 #checkout-review-table{margin-top:15px;}
 
-#billing-new-address-form .form-list .field{
+#billing-new-address-form .form-list .field, #shipping-new-address-form .form-list .field
     width:220px;
 }
-#billing-new-address-form .form-list input.input-text{width:200px;}
-#billing-new-address-form .form-list li.wide input.input-text{width:425px;}
+#billing-new-address-form .form-list input.input-text, #shipping-new-address-form .form-list input.input-text{width:200px;}
+#billing-new-address-form .form-list li.wide input.input-text, #shipping-new-address-form .form-list li.wide input.input-text{width:425px;}
 
 /* Tooltip */
 .tool-tip { border:1px solid #ddd; background-color:#f6f6f6; padding:5px; position:absolute; z-index:9999; }
