--- a/skin/frontend/default/rooja/css/styles.css
+++ b/skin/frontend/default/rooja/css/styles.css
@@ -1090,6 +1090,9 @@ form#discount-coupon-form .discount h2, .shipping h2  {font-size:14px;margin: 0 
 }
 #billing-new-address-form .form-list input.input-text, #shipping-new-address-form .form-list input.input-text{width:200px;}
 #billing-new-address-form .form-list li.wide input.input-text, #shipping-new-address-form .form-list li.wide input.input-text{width:425px;}
+#opc-review{display:none;}
+#opc-review.allow{display:block;}
+
 
 /* Tooltip */
 .tool-tip { border:1px solid #ddd; background-color:#f6f6f6; padding:5px; position:absolute; z-index:9999; }
