--- a/skin/frontend/default/rooja/css/styles.css
+++ b/skin/frontend/default/rooja/css/styles.css
@@ -30,6 +30,8 @@ body          { background:#fff; font:12px/1.35 Arial, Helvetica, sans-serif; co
 
 img           { border:0; vertical-align:top; }
 
+.error {display:none;}
+
 a             { color:#05c; text-decoration:underline; }
 a:hover       { text-decoration:none; }
 :focus        { outline:0; }
