--- a/app/design/frontend/default/rooja/template/customer/form/login.phtml
+++ b/app/design/frontend/default/rooja/template/customer/form/login.phtml
@@ -100,7 +100,7 @@ var W3CDOM = (document.getElementsByTagName && document.createElement);
 
 window.onload = function () {
 	document.forms[0].onsubmit = function () {
-		return validate()
+		return validate();
 	}
 }
 
