--- a/app/design/frontend/default/rooja/template/customer/form/login.phtml
+++ b/app/design/frontend/default/rooja/template/customer/form/login.phtml
@@ -43,7 +43,7 @@
 	<h1 id="logo" class="tr">Rooja</h1>
 	<p id="highlight" class="tr">Member&rsquo;s only shopping club. Save up to 60% off retail.</p>
 </header><!--End Header-->
-	    <?php echo $this->getMessagesBlock()->getGroupedHtml() ?>
+	    <p><?php echo $this->getMessagesBlock()->getGroupedHtml() ?></p>
 <section id="content" class="body">
 	<div id="loginCont">
 		
