--- a/skin/frontend/default/rooja/css/styles.css
+++ b/skin/frontend/default/rooja/css/styles.css
@@ -30,7 +30,7 @@ body          { background:#fff; font:12px/1.35 Arial, Helvetica, sans-serif; co
 
 img           { border:0; vertical-align:top; }
 
-.error {display:none;}
+#loginCont .error-msg {font-size:13px;}
 
 a             { color:#05c; text-decoration:underline; }
 a:hover       { text-decoration:none; }
