--- a/app/design/frontend/default/rooja/template/customer/form/login.phtml
+++ b/app/design/frontend/default/rooja/template/customer/form/login.phtml
@@ -45,7 +45,7 @@
 </header><!--End Header-->
 <section id="content" class="body">
 	<div id="loginCont">
-	    <p style="font-size:14px"><?php echo $this->getMessagesBlock()->getGroupedHtml() ?></p>
+	  <?php echo $this->getMessagesBlock()->getGroupedHtml() ?>
 	<h2 id="members" class="tr">Members Sign In</h2>
 	<a href="<?php echo $this->getForgotPasswordUrl() ?>" id="forgetPass">Forgot your password?</a>
 
