--- a/app/design/frontend/default/rooja/template/catalog/product/view.phtml
+++ b/app/design/frontend/default/rooja/template/catalog/product/view.phtml
@@ -46,8 +46,8 @@
 
 <script type="text/javascript">
 jQuery(function() {
-    jQuery("#attribute128").visualAttribute();
-    jQuery("#attribute129").visualAttribute({
+    jQuery("#optionsCont select").visualAttribute();
+    /*jQuery("#attribute129").visualAttribute({
         attrClicked:function(data) {
 
             if (data.text == 'M') {
@@ -60,7 +60,7 @@ jQuery(function() {
             }
         },
         useTitle:true
-    });
+    });*/
 
 });
 	
@@ -195,7 +195,7 @@ echo '<span>' . $likes = $xml->link_stat->like_count . '</span>';
 					
 			<?php if (($expired == 1) && (!$categoryIds == null)) { ?>
 				<?php if ($_product->isSaleable() && $this->hasOptions()) { ?>
-	            	<?php echo $this->getChildChildHtml('container2', '', true, false) ?>
+	            	<div id="optionsCont"><?php echo $this->getChildChildHtml('container2', '', true, false) ?></div>
 				<?php } else { ?>
 					<?php echo $this->getChildHtml('addtocart') ?>
 		        <?php } ?>
