--- a/skin/frontend/default/rooja/css/rooja.css
+++ b/skin/frontend/default/rooja/css/rooja.css
@@ -401,9 +401,10 @@ td .product-name { width: 130px;}
 	font-size: 12px;
 	line-height: 18px;
 	}
-#shopping-cart-table td .product-name {
+#shopping-cart-table td .product-name,#shopping-cart-table  .item-options {
     width:450px;
     float:left;
+    margin-bottom:5px;
 }
 
 
