--- a/skin/frontend/default/rooja/css/rooja.css
+++ b/skin/frontend/default/rooja/css/rooja.css
@@ -332,7 +332,7 @@ width: 450px;
 overflow: hidden;
 padding: 30px 0 0 0;}
 
-#topCart .continueShoppingLink{color:#fff;font-size:1.2em;margin:15px 0px 0 135px;float:left;}
+#topCart .continueShoppingLink{color:#fff;font-size:1.2em;margin:15px 0px 0 135px;float:left;text-decoration:underline;}
 #checkoutBtn{
     float:right; height:46px;line-height:46px; background:#cc6600; width:181px; font-size:1.4em; text-align:center; color:#fff;display:block;
 }
@@ -491,11 +491,10 @@ p.hiw-header {
 	}	
 a.closer {	
 	font-family: "ltc-bodoni-175-1","ltc-bodoni-175-2", georgia, serif; 
-	background: black url("../images/icons/arrow-nav-white-up.png") no-repeat 78px 11px;
+	background: black url("../images/icons/arrow-nav-white-up.png") no-repeat 58px 11px;
 	font-size:18px; 
 	padding: 5px 29px 5px 10px;
 	color: #fff;
-	text-transform:uppercase;
 }
 
 
