--- a/app/design/frontend/default/rooja/template/rewards/checkout/cart/item/default_m1501.phtml
+++ b/app/design/frontend/default/rooja/template/rewards/checkout/cart/item/default_m1501.phtml
@@ -80,7 +80,7 @@ $isVisibleProduct = $_item->getProduct()->isVisibleInSiteVisibility();
     </td>
     <?php endif ?>
     <?php if ($this->helper('tax')->displayCartPriceExclTax() || $this->helper('tax')->displayCartBothPrices()): ?>
-    <td class="a-center">
+    <td class="">
         <?php if (Mage::helper('weee')->typeOfDisplay($_item, array(1, 4), 'sales') && $_item->getWeeeTaxAppliedAmount()): ?>
             <span class="cart-tax-total" onclick="taxToggle('eunit-item-tax-details<?php echo $_item->getId(); ?>', this, 'cart-tax-total-expanded');">
         <?php else: ?>
@@ -254,7 +254,7 @@ $isVisibleProduct = $_item->getProduct()->isVisibleInSiteVisibility();
 <!-- // WDCA CODE ENDS // -->
 
     <?php if ($this->helper('tax')->displayCartPriceExclTax() || $this->helper('tax')->displayCartBothPrices()): ?>
-    <td class="a-center">
+    <td class="">
         <?php if (Mage::helper('weee')->typeOfDisplay($_item, array(1, 4), 'sales') && $_item->getWeeeTaxAppliedAmount()): ?>
             <span class="cart-tax-total" onclick="taxToggle('esubtotal-item-tax-details<?php echo $_item->getId(); ?>', this, 'cart-tax-total-expanded');">
         <?php else: ?>
