--- a/skin/frontend/default/rooja/css/rooja.css
+++ b/skin/frontend/default/rooja/css/rooja.css
@@ -406,6 +406,7 @@ td .product-name { width: 130px;}
     float:left;
     margin-bottom:5px;
 }
+#shopping-cart-totals-table{font-size:12px;}
 
 
 /* ~~~~~ FOOTER ~~~~~ */
