--- a/app/design/frontend/default/rooja/template/checkout/cart/sidebar/default.phtml
+++ b/app/design/frontend/default/rooja/template/checkout/cart/sidebar/default.phtml
@@ -35,7 +35,26 @@
         <span class="product-image"><img src="<?php echo $this->getProductThumbnail()->resize(50, 50)->setWatermarkSize('30x10'); ?>" width="50" height="50" alt="<?php echo $this->htmlEscape($this->getProductName()) ?>" /></span>
     <?php endif; ?>
     <div class="product-details">
-        <p class="product-name"><?php if ($this->hasProductUrl()): ?><a href="<?php echo $this->getProductUrl() ?>"><?php endif; ?><?php echo $this->htmlEscape($this->getProductName()) ?><?php if ($this->hasProductUrl()): ?></a><?php endif; ?></p>
+        <p class="product-name"><?php if ($this->hasProductUrl()): ?><a href="<?php echo $this->getProductUrl() ?>"><?php endif; ?><?php echo $this->htmlEscape($this->getProductName()) ?><?php if ($this->hasProductUrl()): ?></a><?php endif; ?>
+			 <?php if ($_options = $this->getOptionList()):?>
+		        <dl class="item-options">
+		            <?php foreach ($_options as $_option) : ?>
+		            <?php $_formatedOptionValue = $this->getFormatedOptionValue($_option) ?>
+		            <dt><?php echo $this->htmlEscape($_option['label']) ?></dt>
+		            <dd<?php if (isset($_formatedOptionValue['full_view'])): ?> class="truncated"<?php endif; ?>><?php echo $_formatedOptionValue['value'] ?>
+		                <?php if (isset($_formatedOptionValue['full_view'])): ?>
+		                <div class="truncated_full_value">
+		                    <dl class="item-options">
+		                        <dt><?php echo $this->htmlEscape($_option['label']) ?></dt>
+		                        <dd><?php echo $_formatedOptionValue['full_view'] ?></dd>
+		                    </dl>
+		                </div>
+		                <?php endif; ?>
+		            </dd>
+		            <?php endforeach; ?>
+		        </dl>
+		        <?php endif;?>
+	</p>
 		<table width="100%" border="0">
 			<tr>
 				<td width="500px">
