--- a/skin/frontend/default/rooja/css/rooja.css
+++ b/skin/frontend/default/rooja/css/rooja.css
@@ -408,6 +408,8 @@ td .product-name { width: 130px;}
 }
 #shopping-cart-totals-table{font-size:12px;}
 
+.productOptions{font-size:12px;}
+
 
 /* ~~~~~ FOOTER ~~~~~ */
 
