--- a/skin/frontend/default/rooja/css/styles.css
+++ b/skin/frontend/default/rooja/css/styles.css
@@ -1086,7 +1086,7 @@ form#discount-coupon-form .discount h2, .shipping h2  {font-size:14px;margin: 0 
 .cvv-what-is-this { cursor:help; margin-left:5px; }
 #checkout-review-table{margin-top:15px;}
 
-#billing-new-address-form .form-list .field, #shipping-new-address-form .form-list .field
+#billing-new-address-form .form-list .field, #shipping-new-address-form .form-list .field{
     width:220px;
 }
 #billing-new-address-form .form-list input.input-text, #shipping-new-address-form .form-list input.input-text{width:200px;}
