--- a/skin/frontend/default/rooja/css/styles.css
+++ b/skin/frontend/default/rooja/css/styles.css
@@ -180,7 +180,7 @@ margin: 0;}
 .cart button.button span, #continueShoppingBtn{background-color:#999;}
 
 #continueShoppingBtn {padding:0 15px;}
-button.button span:hover, #continueShoppingBtn:hover{background-color:#000;}
+button.button:hover span, #continueShoppingBtn:hover{background-color:#000;}
 button.button span span { background-position:100% 0; padding:0 12px 0 4px; }
 button.disabled {}
 button.disabled span {}
