new how it works text

--- a/app/design/frontend/default/rooja/template/page/homepage.phtml
+++ b/app/design/frontend/default/rooja/template/page/homepage.phtml
@@ -65,12 +65,12 @@ if(!Mage::getSingleton('customer/session')->isLoggedIn() && ($agent !="facebooke
 					<div class="hiw1-2">
 						<div class="one">
 							<h4>Browse</h4>
-							<p>Events held on Rooja are for members only and last typically between 2 to 3 days. Each event is held only for the stated period - once ended, it is gone for good.</p>
+							<p>Rooja is a luxury fashion club that brings high-end International Fashion merchandise and shopping services to your doorstep in India.</p>
 						</div>
 
 						<div class="two">
 							<h4>Shop</h4>
-							<p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis.</p>
+							<p>Shop our curated selection of the world&rsquo;s best brands in our boutiques and featured sales events.</p>
 						</div>
 					</div>
 
