--- a/app/design/frontend/default/rooja/template/checkout/onepage/payment.phtml
+++ b/app/design/frontend/default/rooja/template/checkout/onepage/payment.phtml
@@ -29,6 +29,28 @@ var payment = new Payment('co-payment-form', '<?php echo $this->getUrl('checkout
 </script>
 <form action="" id="co-payment-form">
     <?php echo $this->getChildHtml('methods') ?>
+	<p class="ccHintText">You will be redirected to CCAvenue our secure online payment-processing partner.</p>
+	<p class="codHintText">We verify all Cash on Delivery orders over the phone after you have made a purchase and start processing the order. Our customer service team will contact you within 24 hours and alternatively you can call us at +91-11-45673347 to verify your order. Failing verification of the order will result in a cancellation. Failure to accept a verified order will revoke your Cash On Delivery privileges on future orders.</p>
+	<?php echo $this->getChildChildHtml('additional'); ?>
+	<script type="text/javascript">
+		jQuery(document).ready(function(){
+			if (jQuery("#p_method_cashondelivery:checked").length > 0){ jQuery(".codHintText").show(); }
+
+
+			  // add functionality for the onclicks here
+			  jQuery("#p_method_cashondelivery").click(function() {
+			    jQuery(".codHintText").show();
+				jQuery(".ccHintText").hide();
+			  });
+
+			  jQuery("#p_method_Avenues_standard").click(function() {
+			    jQuery(".ccHintText").show();
+				jQuery(".codHintText").hide();
+			  });
+		 });
+
+
+	</script>
     <div class="tool-tip" id="payment-tool-tip" style="display:none;">
         <div class="btn-close">
             <a href="#" id="payment-tool-tip-close"><img src="<?php echo $this->getSkinUrl('images/btn_window_close.gif') ?>" alt="<?php echo $this->__('Close') ?>" /></a>
