--- a/app/design/frontend/default/rooja/template/catalog/product/list.phtml
+++ b/app/design/frontend/default/rooja/template/catalog/product/list.phtml
@@ -81,7 +81,7 @@ echo $likes = $xml->link_stat->like_count;
 
 <script type="text/javascript">
 	jQuery(document).ready(function(){
-		jQuery(".product").hover(function () {
+		jQuery(".product").hoverIntent(function () {
 		    jQuery(this).find('.productName').fadeToggle(500);
 		  });
 	 });
