--- a/app/design/frontend/default/rooja/template/catalog/product/homepage.phtml
+++ b/app/design/frontend/default/rooja/template/catalog/product/homepage.phtml
@@ -188,8 +188,11 @@ $numProducts = $this->getNumProducts() ? $this->getNumProducts() : 20;
 <script type="text/javascript">
 	jQuery(document).ready(function(){
 		jQuery(".homeSale p").hide();
-		jQuery(".homeSale").hoverIntent(function () {
-		    jQuery(this).find('p').fadeToggle(500);
+		jQuery(".homeSale").hover(function () {
+		    jQuery(this).find('p').fadeIn(500);
+		  }, 
+		  function () {
+		    jQuery(this).find('p').fadeOut(500);
 		  });
 	 });
 			
