--- a/app/design/frontend/default/rooja/template/catalog/product/list.phtml
+++ b/app/design/frontend/default/rooja/template/catalog/product/list.phtml
@@ -81,8 +81,12 @@ echo $likes = $xml->link_stat->like_count;
 
 <script type="text/javascript">
 	jQuery(document).ready(function(){
-		jQuery(".product").hoverIntent(function () {
-		    jQuery(this).find('.productName').fadeToggle(500);
+		jQuery(".product").hover(function () {
+		    jQuery(this).find('.productName').fadeIn(500);
+		  }, 
+		  function () {
+		    jQuery(this).find('.productName').fadeOut(500);
+		 
 		  });
 	 });
 			
