--- a/app/design/frontend/default/rooja/template/customer/form/login.phtml
+++ b/app/design/frontend/default/rooja/template/customer/form/login.phtml
@@ -31,6 +31,21 @@
  * @see Mage_Customer_Block_Form_Login
  */
 ?>
+<script src="/js/jquery.defaultvalue.js" type="text/javascript"></script> 
+<script type="text/javascript">
+jQuery(function() {
+	
+	jQuery('input[type="text"], input[type="password"]').defaultValue();
+	
+	setTimeout(function() {
+		// Chrome does not fire a change event when autofilling forms
+		// To prevent weird overlap with defaultValue and Chrome autofill,
+		// fire your own change event after 100 or so milliseconds
+		jQuery('input[type="text"]').change();
+	}, 100);
+	
+});
+</script>
 <div id="notifyWrapper">
 <div class="wrapper">
 	<nav id="loginTabs">
@@ -50,7 +65,9 @@
 	<a href="<?php echo $this->getForgotPasswordUrl() ?>" id="forgetPass">Forgot your password?</a>
 
 	<form action="<?php echo $this->getPostActionUrl() ?>" method="post" id="login-form">
-        <input type="text" name="login[username]" value="<?php echo $this->htmlEscape($this->getUsername()) ?>" id="email" class="input-text required-entry validate-email" title="<?php echo $this->__('Email Address') ?>" />
+        <label for="email">Email Address</label>
+		<input type="text" name="login[username]" value="<?php echo $this->htmlEscape($this->getUsername()) ?>" id="email" class="input-text required-entry validate-email" title="<?php echo $this->__('Email Address') ?>" />
+		<label for="pass">Password</label>
 		<input type="password" name="login[password]" class="input-text required-entry validate-password" id="pass" title="<?php echo $this->__('Password') ?>" />
 				<button id="fBConnect" rel="facebook-connect" type="button" title="<?php echo $this->__('Connect with Facebook') ?>" class="button"></button> 
 		<input type="submit" id="loginBtn" name="loginBtn" class="tr">
